--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-gpt-vue-client",
+  "name": "openai-vue-client",
   "version": "1.0.0",
   "author": "ilearnjs",
   "private": true,
